--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <section>
       <h2 class="sectionHeader"> Rozkładówka zajęć</h2>
       <section>
-        <h3>Tydzień 1</h3>
+        <h3 class="troll">Tydzień 1 - plus fajny kabaczek</h3>
         <p>Taki lajcik w sumie, ale fajny</p>
       </section>
 
       <section>
-        <h3>Tydzień 2</h3>
+        <h3 class="troll">Tydzień 2</h3 class="troll">
         <ol>
           <li>Chrome Developer Tools - ppm + zbadaj</li>
           <li>CTRL + SHIFT + P - document format</li>
