--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <section>
-        <h3 class="troll">Tydzień 2</h3 class="troll">
+        <h3 class="troll">Tydzień 2</h3>
         <ol>
           <li>Chrome Developer Tools - ppm + zbadaj</li>
           <li>CTRL + SHIFT + P - document format</li>
