dużo zmian w stylach i html

--- a/index.html
+++ b/index.html
@@ -11,49 +11,54 @@
 
 
 <body>
-  <header>
-    <a href="index.html">Strona główna</a>
-    <a href="podstrona.html">Podstrona</a>
-    <a href="#dobroPowraca">Zobacz logo</a>
+  <header class="navigation">
+    <a class="navigation__link" href="index.html">Strona główna</a>
+    <a class="navigation__link" href="podstrona.html">Podstrona</a>
+    <a class="navigation__link" href="#photoUncle">Zobacz fote wuja</a>
   </header>
 
   <main>
-    <header>
-      <h1 class="mainHeader">Przemysław Wysocki - seksowna strona</h1>
+    <header class="header">
+      <h1 class="header__heading">Przemysław Wysocki - i co ja robię tu?</h1>
     </header>
 
-    <section class="sexy" id="sexy">
-      <h2 class="sectionHeader">O czym będzie pisane?</h2>
-      <p> To będzie taka strona o tym co się dowiedziałem na kursie WTF: Co ten Frontend? Może znajdą się tutaj także
-        informacje z książek.<br>
-        <a href="podstrona.html">Tu możesz zajrzeć co było w książkach</a>
+    <section class="about">
+      <h2 class="about__header">O czym tu mowa?</h2>
+      <p class="about__paragraph"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył w ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc on się dorozumiewać ograniczającego warunku, pod instynktu wydobyć i uszczęśliwił. Może się w nim przestawać możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.<br>
+        <a class="about__link" href="podstrona.html">Tu możesz zajrzeć co było w książkach</a>
       </p>
     </section>
 
-    <section>
-      <h2 class="sectionHeader"> Rozkładówka zajęć</h2>
-      <section>
-        <h3 class="troll">Tydzień 1 - plus fajny kabaczek</h3>
-        <p>Taki lajcik w sumie, ale fajny</p>
+    <section class="news">
+      <h2 class="news__header">Jakieś tam wiadomości</h2>
+
+      <section class="news__news-content">
+        <h3 class="news__news-content__header">Co dzieje się w mojej głowie</h3>
+        <p class="news__news-content__paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
       </section>
 
-      <section>
-        <h3 class="troll">Tydzień 2</h3>
-        <ol>
-          <li>Chrome Developer Tools - ppm + zbadaj</li>
-          <li>CTRL + SHIFT + P - document format</li>
+      <section class="news__news-content">
+        <h3 class="news__news-content__header">W dupie byłem i gówno widziałem</h3>
+        <ol class="news__news-content__list">
+          <li class="news__news-content__list__item">Chrome Developer Tools - ppm + zbadaj</li>
+          <p class="news__newscontent__header__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+          <li class="news__news-content__list__item">CTRL + SHIFT + P - document format</li>
         </ol>
       </section>
     </section>
   </main>
 
-  <footer class="dobroPowraca" id="dobroPowraca">
-    <img src="dobro.png" alt="grafika z napisem dobro powraca">
-    <p>Autorem jest sexulaj 2019</p>
+  <footer class="footer">
+    <img class="footer__image" src="dobro.png" alt="grafika z napisem dobro powraca" id="photoUncle">
+    <p class="footer__paragraph">Autorem jest sexulaj 2019</p>
   </footer>
 
-  <script src="main.js"></script>
+  
+  <!--skrypt usunięty tymczasowo--> 
 
+  <script src="main."></script>
+ 
+  <!--skrypt usunięty tymczasowo--> 
 
 
 </body>
