BEM changes+style changes

--- a/index.html
+++ b/index.html
@@ -22,27 +22,40 @@
       <h1 class="header__heading">Przemysław Wysocki - i co ja robię tu?</h1>
     </header>
 
-    <section class="about">
+    <section class="about orangeBoxes">
       <h2 class="about__header">O czym tu mowa?</h2>
-      <p class="about__paragraph"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył w ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc on się dorozumiewać ograniczającego warunku, pod instynktu wydobyć i uszczęśliwił. Może się w nim przestawać możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.<br>
+      <p class="about__paragraph"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył w
+        ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc
+        on się dorozumiewać ograniczającego warunku, pod instynktu wydobyć i uszczęśliwił. Może się w nim przestawać
+        możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek
+        jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.<br>
         <a class="about__link" href="podstrona.html">Tu możesz zajrzeć co było w książkach</a>
       </p>
     </section>
 
-    <section class="news">
-      <h2 class="news__header">Jakieś tam wiadomości</h2>
+    <section class="notices orangeBoxes">
+      <h2 class="notices__header">Jakieś tam wiadomości</h2>
 
-      <section class="news__news-content">
-        <h3 class="news__news-content__header">Co dzieje się w mojej głowie</h3>
-        <p class="news__news-content__paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
+      <section class="notices__content">
+        <h3 class="notices__content-header">Co tu się dzieje mój drogi?</h3>
+        <p class="notices__content-paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak
+          definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego
+          czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
       </section>
 
-      <section class="news__news-content">
-        <h3 class="news__news-content__header">W dupie byłem i gówno widziałem</h3>
-        <ol class="news__news-content__list">
-          <li class="news__news-content__list__item">Chrome Developer Tools - ppm + zbadaj</li>
-          <p class="news__newscontent__header__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-          <li class="news__news-content__list__item">CTRL + SHIFT + P - document format</li>
+      <section class="notices__content">
+        <h3 class="notices__content-header">W dupie byłem i gówno widziałem</h3>
+        <ol class="notices__content-list">
+          <li class="notices__content-listitem">Taki był początek</li>
+          <p class="notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+          <li class="notices__content-listitem">Taki będzie koniec</li>
+          <p class="news__newscontent__header__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
         </ol>
       </section>
     </section>
@@ -53,12 +66,12 @@
     <p class="footer__paragraph">Autorem jest sexulaj 2019</p>
   </footer>
 
-  
-  <!--skrypt usunięty tymczasowo--> 
+
+  <!--skrypt usunięty tymczasowo-->
 
   <script src="main."></script>
- 
-  <!--skrypt usunięty tymczasowo--> 
+
+  <!--skrypt usunięty tymczasowo-->
 
 
 </body>
