add h4, change look

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1 class="header__heading">Przemysław Wysocki - i co ja robię tu?</h1>
     </header>
 
-    <section class="about orangeBoxes">
+    <section class="about">
       <h2 class="about__header">O czym tu mowa?</h2>
       <p class="about__paragraph"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył w
         ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc
@@ -33,7 +33,7 @@
       </p>
     </section>
 
-    <section class="notices orangeBoxes">
+    <section class="notices">
       <h2 class="notices__header">Jakieś tam wiadomości</h2>
 
       <section class="notices__content">
@@ -45,18 +45,21 @@
 
       <section class="notices__content">
         <h3 class="notices__content-header">W dupie byłem i gówno widziałem</h3>
-        <ol class="notices__content-list">
-          <li class="notices__content-listitem">Taki był początek</li>
-          <p class="notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
-            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
-            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
-            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-          <li class="notices__content-listitem">Taki będzie koniec</li>
-          <p class="news__newscontent__header__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
-            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
-            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
-            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-        </ol>
+        <h4 class="notices__content-headings">Taki był początek</h4>
+        <p class="notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+          pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+          dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+          ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+        <h4 class="notices__content-headings">Tak jest teraz</h4>
+        <p class="notices__content-paragraph">Może się w nim przestawać
+          możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek
+          jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
+        <h4 class="notices__content-headings">Taki będzie koniec</h4>
+        <p class=" notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+          pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+          dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+          ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+
       </section>
     </section>
   </main>
