--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Penetrator 12</title>
+  <title>Coś tam coś tam</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,7 +19,7 @@
 
   <main>
     <header class="header">
-      <h1 class="header__heading">Przemysław Wysocki - i co ja robię tu?</h1>
+      <h1 class="header__heading">Jak rozpętałem II Wojnę Światową</h1>
     </header>
 
     <section class="about">
@@ -37,25 +37,25 @@
       <h2 class="notices__header">Jakieś tam wiadomości</h2>
 
       <section class="notices__content">
-        <h3 class="notices__content-header">Co tu się dzieje mój drogi?</h3>
-        <p class="notices__content-paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak
+        <h3 class="notices__header">Co tu się dzieje mój drogi?</h3>
+        <p class="content__paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak
           definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego
           czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
       </section>
 
       <section class="notices__content">
-        <h3 class="notices__content-header">W dupie byłem i gówno widziałem</h3>
-        <h4 class="notices__content-headings">Taki był początek</h4>
-        <p class="notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+        <h3 class="notices__header">W dupie byłem i gówno widziałem</h3>
+        <h4 class="notices__subheader">Taki był początek</h4>
+        <p class="notices__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
           pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
           dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
           ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-        <h4 class="notices__content-headings">Tak jest teraz</h4>
-        <p class="notices__content-paragraph">Może się w nim przestawać
+        <h4 class="notices__subheader">Tak jest teraz</h4>
+        <p class="notices__paragraph">Może się w nim przestawać
           możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek
           jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
-        <h4 class="notices__content-headings">Taki będzie koniec</h4>
-        <p class=" notices__content-paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
+        <h4 class="notices__subheader">Taki będzie koniec</h4>
+        <p class=" notices__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
           pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
           dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
           ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
@@ -65,8 +65,8 @@
   </main>
 
   <footer class="footer">
-    <img class="footer__image" src="dobro.png" alt="grafika z napisem dobro powraca" id="photoUncle">
-    <p class="footer__paragraph">Autorem jest sexulaj 2019</p>
+    <img class="footer__image" src="dobro.png" alt="grafika z napisem jesteś seksi" id="photoUncle">
+    <p class="footer__paragraph">Autor strony: <em>Jam Łasica</em></p>
   </footer>
 
 
