--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="navigation">
     <a class="navigation__link" href="index.html">Strona główna</a>
     <a class="navigation__link" href="podstrona.html">Podstrona</a>
-    <a class="navigation__link" href="#photoUncle">Zobacz fote wuja</a>
+    <a class="navigation__link" href="#footer">Zobacz fote wuja</a>
   </header>
 
   <main>
@@ -65,17 +65,13 @@
   </main>
 
   <footer class="footer">
-    <img class="footer__image" src="dobro.png" alt="grafika z napisem jesteś seksi" id="photoUncle">
+    <img class="footer__image" src="dobro.png" alt="grafika z napisem jesteś seksi" id="footer">
     <p class="footer__paragraph">Autor strony: <em>Jam Łasica</em></p>
   </footer>
 
+  <script src="main.js"></script>
 
-  <!--skrypt usunięty tymczasowo-->
-
-  <script src="main."></script>
-
-  <!--skrypt usunięty tymczasowo-->
-
+ 
 
 </body>
 
