--- a/index.html
+++ b/index.html
@@ -19,59 +19,70 @@
 
   <main>
     <header class="header">
-      <h1 class="header__heading">Jak rozpętałem II Wojnę Światową</h1>
+      <img class="header__image" src="dobro.png" alt="grafika z napisem jesteś seksi">
     </header>
 
-    <section class="about">
-      <h2 class="about__header">O czym tu mowa?</h2>
-      <p class="about__paragraph"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył w
-        ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc
+    <section class="about boxes">
+      <h2 class="about__header headers"> Jeśli jesteś seksi, to tak trzymaj!</h2>
+      <p class="about__paragraph paragraphs"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego żył
+        w ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć; więc
         on się dorozumiewać ograniczającego warunku, pod instynktu wydobyć i uszczęśliwił. Może się w nim przestawać
         możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek
         jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.<br>
-        <a class="about__link" href="podstrona.html">Tu możesz zajrzeć co było w książkach</a>
+        <a class="about__link" href="podstrona.html">Zajrzyj tu jeśli interesuje Cię jak być seksi.</a>
       </p>
+        
+      
     </section>
 
-    <section class="notices">
-      <h2 class="notices__header">Jakieś tam wiadomości</h2>
+    <section class="notices boxes">
+      <h2 class="notices__header headers">Jeśli nie czujesz się seksi - dołącz do nas</h2>
 
       <section class="notices__content">
-        <h3 class="notices__header">Co tu się dzieje mój drogi?</h3>
-        <p class="content__paragraph">Może się w nim przestawać możemy. Albowiem że na trudność tak
-          definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego
+        <h3 class="notices__header headers">Jak stać się seksi?</h3>
+        <p class="notices__paragraph paragraphs">Może się w nim przestawać możemy. Albowiem że na trudność tak
+          definiował. Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego
           czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
       </section>
 
       <section class="notices__content">
-        <h3 class="notices__header">W dupie byłem i gówno widziałem</h3>
-        <h4 class="notices__subheader">Taki był początek</h4>
-        <p class="notices__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
-          pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
-          dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
-          ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-        <h4 class="notices__subheader">Tak jest teraz</h4>
-        <p class="notices__paragraph">Może się w nim przestawać
-          możemy. Albowiem że na trudność tak definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek
-          jemu samemu był w prawdzie jego czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
-        <h4 class="notices__subheader">Taki będzie koniec</h4>
-        <p class=" notices__paragraph">On chce uszczęśliwić, skądże więc pochodzi od Istności
-          pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
-          dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
-          ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
-
+        <h3 class="notices__header headers">Co zyskujesz?</h3>
+        <section class="feature">
+          <h4 class="notices__subheader headers">Klucz do serca wymarzonego partnera</h4>
+          <p class="notices__paragraph paragraphs">On chce uszczęśliwić, skądże więc pochodzi od Istności
+            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+          <h4 class="notices__subheader headers">Kartę klubowicza klubu "SEKSI PEOPLE" i złoty łańcuch</h4>
+          <p class="notices__paragraph paragraphs">Może się w nim przestawać możemy. Albowiem że na trudność tak
+            definiował; Substancyą, powiada on, kiedy ja istnieję dla których szafunek jemu samemu był w prawdzie jego
+            czyny być poczciwym bez wierzenia, że otrzymał zapłatę.</p>
+          <h4 class="notices__subheader headers">Zniżki na zakupy u naszych partnerów</h4>
+          <p class=" notices__paragraph paragraphs">On chce uszczęśliwić, skądże więc pochodzi od Istności
+            pierwiastkowej służy za skład, więc na winę. Skutki i ubóstwie, w biedzie i właściwa definicya jest więc też
+            dopiero po niejednej za jego gramatyce, osobliwie w miarę fizycznego świata należy szczęśliwość zależy czy
+            ten środek jest poięciu o bytności czyli przemyślności; chciwość własnego.</p>
+        </section>
       </section>
     </section>
+
+    <div class="testujemy">
+
+    </div>
+
+
   </main>
+
 
   <footer class="footer">
     <img class="footer__image" src="dobro.png" alt="grafika z napisem jesteś seksi" id="footer">
     <p class="footer__paragraph">Autor strony: <em>Jam Łasica</em></p>
   </footer>
 
+
   <script src="main.js"></script>
 
- 
+
 
 </body>
 
