main styles changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section class="about boxes">
-      <h1 class="about__header headers"> Jeśli jesteś seksi, to tak trzymaj!</h1>
+      <h1 class="about__header headers about__header--color"> Jeśli jesteś seksi, to tak trzymaj!</h1>
         <p class="about__paragraph paragraphs"> Początek traktatu czasu panowania Fryderyka Wielkiego, Króla Pruskiego
           żył
           w ostatniej biedzie równie łaskawy czytelnik sam mogł biedy nabawić i która w religii, która niemoże poiąć;
@@ -64,7 +64,9 @@
         </section>
       </section>
     </section>
-    <div class="testujemy"></div>
+    <div class="testing">
+      <p class="testing_paragraph testing__paragraph--js">Testujemy </p>
+    </div>
   </main>
 
   <footer class="footer">
